--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,6 +35,12 @@ input {
   color: currentColor;
   font-family: inherit;
   font-size: inherit;
+  background-color: transparent;
+  border: none;
+}
+
+button:focus {
+  outline: none;
 }
 
 ul,
